--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>js</title>
     </head>
     <body>
+        <h1>Hello!</h1>
         <script src="script.js"></script>
     </body>
 </html>
